# pytemplate

./: CHANGELOG.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
hooks/: post_gen_project.py
setup/githooks/: pre-push
setup/preferences/examples/: code.code-workspace  shell.nix
setup/scripts/: update_pylint_dictionary.py
src/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.py
tests/unit/: test_create_book_reference.py
{{ cookiecutter.project_short }}/: Makefile  README.md  SECURITY.md  pyproject.toml
{{ cookiecutter.project_short }}/setup/dictionaries/: whitelist
{{ cookiecutter.project_short }}/setup/githooks/: pre-commit  pre-push
{{ cookiecutter.project_short }}/setup/preferences/examples/: black  code.code-workspace  pylintrc  settings.json  shell.nix
{{ cookiecutter.project_short }}/setup/scripts/: spellcheck.py  version_control.sh
{{ cookiecutter.project_short }}/src/{{ cookiecutter.project_slug }}/: __init__.py  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_short }}/tests/unit/: test_{{ cookiecutter.project_slug }}.py
